changing architecture to use job store